# respondo

./: .gitignore  ASSISTANT_UI_DOCS.md  RAILTRACKS_DOCS.md  README.md  file-tree-empty.md
Backend/: bland_caller.py  main.py  pyproject.toml  report_generation_agent.py  requirements.txt  sample.mov  trial.py  trial2.py  vapi_caller.py  video_agent.py
Backend/security-manual-docs/: README.md  security_manual_chunks.jsonl
Frontend/: index.html  package-lock.json  package.json  vite.config.ts
Frontend/src/: App.tsx  index.css  types.ts
Frontend/src/components/: AppShell.tsx  AssetsPage.tsx  CallPhonesPage.tsx  ClassifyIssueDialog.tsx  GetVidAnalysisPage.tsx  IssueAgentChat.tsx  IssueDashboard.tsx  SettingsPage.tsx
Frontend/src/context/: IssueReportsContext.tsx
Frontend/src/data/: issues.ts
Frontend/src/hooks/: useDepartments.ts  useIssues.ts
Frontend/src/lib/: issueDepartmentNotify.ts
